--- a/css/agency.css
+++ b/css/agency.css
@@ -23,11 +23,11 @@ p {
 }
 
 a {
-  color: #87c0cd;
+  color: #97c593;
 }
 
 a:hover {
-  color: #87c0cd;
+  color: #75af70;
 }
 
 .text-primary {
@@ -130,14 +130,22 @@ section h3.section-subheading {
   padding: 20px 40px;
 }
 
+.intro-text a {
+  color: white;
+}
+
+.intro-text a:hover {
+  color: #97c593;
+}
+
 .btn-primary {
-  background-color: #87c0cd;
-  border-color: #87c0cd;
+  background-color: #75af70;
+  border-color: #75af70;
 }
 
 .btn-primary:active, .btn-primary:focus, .btn-primary:hover {
-  background-color: #87c0cd !important;
-  border-color: #87c0cd !important;
+  background-color: #609c5b !important;
+  border-color: #609c5b !important;
   color: white;
 }
 
@@ -147,12 +155,12 @@ section h3.section-subheading {
 }
 
 ::-moz-selection {
-  background: #a5d9e6;
+  background: #a3d59e;
   text-shadow: none;
 }
 
 ::selection {
-  background: #a5d9e6;
+  background: #a3d59e;
   text-shadow: none;
 }
 
@@ -179,17 +187,17 @@ img::-moz-selection {
   text-transform: uppercase;
   color: white;
   border: 0;
-  background-color: #87c0cd;
+  background-color: #97c593;
   font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
 #mainNav .navbar-brand {
-  color: #87c0cd;
+  color: #97c593;
   font-family: 'Kaushan Script', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
 #mainNav .navbar-brand.active, #mainNav .navbar-brand:active, #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
-  color: #87c0cd;
+  color: #97c593;
 }
 
 #mainNav .navbar-nav .nav-item .nav-link {
@@ -202,13 +210,13 @@ img::-moz-selection {
 }
 
 #mainNav .navbar-nav .nav-item .nav-link.active, #mainNav .navbar-nav .nav-item .nav-link:hover {
-  color: #87c0cd;
+  color: #97c593;
 }
 
 @media (min-width: 992px) {
   #mainNav {
-    padding-top: 25px;
-    padding-bottom: 25px;
+    padding-top: 16px;
+    padding-bottom: 16px;
     -webkit-transition: padding-top 0.3s, padding-bottom 0.3s;
     transition: padding-top 0.3s, padding-bottom 0.3s;
     border: none;
@@ -216,6 +224,7 @@ img::-moz-selection {
   }
   #mainNav .navbar-brand {
     font-size: 1.75em;
+    color: white;
     -webkit-transition: all 0.3s;
     transition: all 0.3s;
   }
@@ -236,11 +245,12 @@ img::-moz-selection {
 header.masthead {
   text-align: center;
   color: white;
-  background-image: url("../img/header-bg.jpg");
+  background-image: url("../img/bridge.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
   background-size: cover;
+  filter: .9;
 }
 
 header.masthead .intro-text {
@@ -296,11 +306,11 @@ header.masthead .intro-text .intro-heading {
 
 #portfolio .my-icon-row a {
   margin-right: 10px;
-  color: #46a7bd;
+  color: #366732;
 }
 
 #portfolio .my-icon-row a:hover {
-  color: #47cae8;
+  color: #76b371;
   text-decoration: none;
 }
 
@@ -324,7 +334,7 @@ header.masthead .intro-text .intro-heading {
   -webkit-transition: all ease 0.5s;
   transition: all ease 0.5s;
   opacity: 0;
-  background: rgba(170, 181, 184, 0.4);
+  background: rgba(151, 197, 147, 0.344);
 }
 
 #portfolio .portfolio-item .portfolio-link .portfolio-hover:hover {
@@ -407,7 +417,7 @@ header.masthead .intro-text .intro-heading {
   font-size: 16px;
   font-style: italic;
   margin: 20px 0 30px;
-  font-family: 'Droid Serif', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
 .portfolio-modal .modal-content ul.list-inline {
@@ -474,7 +484,7 @@ header.masthead .intro-text .intro-heading {
   width: 2px;
   margin-left: -1.5px;
   content: '';
-  background-color: #e9ecef;
+  background-color: #97c593;
 }
 
 .timeline > li {
@@ -523,9 +533,9 @@ header.masthead .intro-text .intro-heading {
   margin-left: 0;
   text-align: center;
   color: white;
-  border: 7px solid #e9ecef;
+  border: 7px solid #97c593;
   border-radius: 100%;
-  background-color: #87c0cd;
+  background-color: #97c593;
 }
 
 .timeline > li .timeline-image h4 {
@@ -696,7 +706,7 @@ section#contact .form-group textarea.form-control {
 }
 
 section#contact .form-control:focus {
-  border-color: #87c0cd;
+  border-color: #97c593;
   -webkit-box-shadow: none;
   box-shadow: none;
 }
@@ -764,5 +774,5 @@ ul.social-buttons li a {
 }
 
 ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons li a:hover {
-  background-color: #87c0cd;
+  background-color: #97c593;
 }
