--- a/css/agency.css
+++ b/css/agency.css
@@ -23,11 +23,12 @@ p {
 }
 
 a {
-  color: #97c593;
+  color: #366732;
 }
 
 a:hover {
   color: #75af70;
+  text-decoration: none;
 }
 
 .text-primary {
@@ -53,17 +54,13 @@ section .my-story{
 }
 
 section .my-photo{
-  box-sizing: border-box;
-  padding: 20px;
-  border: 1px solid #c0cbd3;
-  box-shadow: 2px 3px 3px #c0cbd3;
-  border-radius: 5px;
   margin-bottom: 45px;
 }
 
 .my-photo img {
   display: block;
   width: 100%;
+  border-radius: 3px;
 }
 
 section .my-project {
@@ -245,6 +242,7 @@ img::-moz-selection {
 header.masthead {
   text-align: center;
   color: white;
+  height: 100vh;
   background-image: url("../img/bridge.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -682,14 +680,23 @@ header.masthead .intro-text .intro-heading {
 }
 
 section#contact {
-  background-color: #212529;
-  background-image: url("../img/map-image.png");
+  background-image: url("../img/surface.jpg");
   background-repeat: no-repeat;
   background-position: center;
 }
 
 section#contact .section-heading {
-  color: #fff;
+  color: #212529;
+}
+
+section#contact .my-contact-info {
+  box-sizing: border-box;
+  padding-top: 30px;
+  background-color: rgba(255, 255, 255, 0.8);
+}
+
+section#contact .my-contact-info:nth-child(2) {
+  padding-bottom: 30px;
 }
 
 section#contact .form-group {
@@ -740,7 +747,7 @@ section#contact :-ms-input-placeholder {
 }
 
 footer {
-  padding: 25px 0;
+  padding: 45px 0 25px 0;
   text-align: center;
 }
 
