--- a/css/styles.css
+++ b/css/styles.css
@@ -126,6 +126,28 @@ section h3.section-subheading {
   color: #97c593;
 }
 
+.intro-cta .btn-intro {
+  color: white;
+  font-size: 1.2em;
+  font-weight: bold;
+  background-color: #75af70;
+  border: 1px solid #75af70;
+  border-radius: 5px;
+  padding: 10px 20px;
+  transition: all .3s;
+  cursor: pointer;
+}
+
+.intro-cta .btn-intro:first-child {
+  margin-right: 15px;
+}
+
+.intro-cta .btn-intro:hover {
+  background: #609c5b;
+  background-color: rgba(96, 156, 91, 0.8);
+  border: 1px solid #609c5b;
+}
+
 .btn-primary {
   background-color: #75af70;
   border-color: #75af70;
@@ -248,10 +270,10 @@ header.masthead .intro-text {
 }
 
 header.masthead .intro-text .intro-lead-in {
-  font-size: 22px;
+  font-size: 28px;
   font-style: italic;
   line-height: 22px;
-  margin-bottom: 25px;
+  margin-bottom: 45px;
   font-family: 'Droid Serif', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
