fixed display bug due to missing curly brace

--- a/css/styles.css
+++ b/css/styles.css
@@ -458,6 +458,7 @@ header.masthead .intro-text .intro-heading {
 
 .project-overview p, .technical-details p {
   color: #222222;
+}
 
 .portfolio-modal .close-modal {
   position: absolute;
