--- a/hbdsteph/styles.css
+++ b/hbdsteph/styles.css
@@ -1,4 +1,20 @@
 body {
   padding: 0;
   margin: 0;
+  background-color: #f5f5f5;
+  font-family: 'Muli';
+  color: #575757;
+}
+
+.shadow {
+  box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.2) !important;
+}
+
+.message img {
+  max-width: 100%;
+}
+
+.text {
+  min-height: 250px;
+  background-color: white;
 }
