--- a/hbdsteph/styles.css
+++ b/hbdsteph/styles.css
@@ -7,7 +7,7 @@ body {
 }
 
 .shadow {
-  box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.2) !important;
+  box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.2);
 }
 
 .message img {
